--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 用户名：<input type="text" id="username"><br><br>
 密码： <input type="password" id="password"><br><br>
 <button id="login">登录</button>
+<button id="register">注册</button>
 
 </body>
 <script src="jquery-1.12.4.js"></script>
@@ -26,6 +27,7 @@
     password = $(this).val().trim()
   })
 
+  // 登录
   $('#login').click(function () {
     $.post('http://dao.sinicnet.cn:5000/login',
       {name: username,password: password},
@@ -37,6 +39,32 @@
           location.href = 'http://localhost:63342/songyu/logout.html'
         } else {
           alert('请注册之后再登录')
+        }
+      }
+    )
+  })
+
+  // 注册
+  $('#register').click(function () {
+    $.post('http://dao.sinicnet.cn:5000/signup',
+      {name: username, password: password},
+      function (res) {
+        if(!username) {
+          alert('用户名不能为空');
+          return;
+        }
+        if(!password) {
+          alert('密码不能为空');
+          return;
+        }
+        console.log(res)
+        if(res.code == 200){
+          alert('注册成功');
+          location.href = 'http://localhost:63342/songyu/login.html'
+        } else {
+          alert('注册失败')
+          $('#username').val('')
+          $('#password').val('')
         }
       }
     )
